--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <link rel="stylesheet" type="text/css" href="styles.css">
-   </head>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+     </head>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <p>Copy that control. I hear you loud and clear.</p>
       <p>Proceed with operation HTML Rulez Dude!</p>
       <p>Hopefully this works</p>
-      <p> testing</p>
+      <p> testing now</p>
    </body>
 </html> 
